--- a/Angular/demo/demoApp/src/app/app.component.html
+++ b/Angular/demo/demoApp/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-user-form></app-user-form>
-<app-all-users></app-all-users>
+<!-- <app-user-form></app-user-form>
+<app-all-users></app-all-users> -->
+<h1>AppComponent</h1>
+
+<app-note></app-note>
+<app-task [stuff] = '5'></app-task>
